# whatsapp_chat_llm

./: .gitignore  app.py  passenger_wsgi.py  pyproject.toml  requirements.txt  whatsapp_business_client.py  whatsapp_green_client.py
.devcontainer/: devcontainer.json
dev_utils/: get_momo_credentials.py
scripts/: deploy_production.sh
src/: app.py  app_old.py  hello.py  mtn_momo.py  whatsapp_green_client.py
src/chat_clients/: whatsapp_business_client.py  whatsapp_green_client.py
src/chatbot/: assistant.py  base_state.py
src/chatbot/agents/: cost_calculator_mixin.py  shop_assistant.py  shop_assistant_prompt.py
src/chatbot/mixins/: diagram_drawer_mixin.py
src/config/: assistant_conf.py  conf.py  loguru copy.yaml  loguru.yaml
src/test/: test_assistant.py
